# trax

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CreateSolution.bat  Install.bat  LICENSE  README.md  ROADMAP.md  Rebuild.bat
Apps/: CMakeLists.txt  EEPFileConverter.cpp
Code/common/: CMakeLists.txt  Helpers.h  Interval.h  NarrowCast.h  RedirectStandardOutput_Base.h
Code/common/support/: CMakeLists.txt  CommonSupportConsole.h  CommonSupportStream.h  CommonSupportXML.h
Code/common/tests/: CMakeLists.txt  Test.cpp  TestHelpers.cpp  TestInterval.cpp  TestNarrowCast.cpp
Code/dim/: CMakeLists.txt  Configuration.h  DimLimits.h  DimensionedValues.h
Code/dim/support/: CMakeLists.txt  DimSupportStream.h  DimSupportXML.h
Code/dim/support/source/: DimSupportStream.cpp
Code/dim/tests/: BoostTestDimensionedValuesHelpers.h  CMakeLists.txt  DimTest.cpp  TestDimensionatedValues.cpp
Code/spat/: Box.h  CMakeLists.txt  Frame.h  Matrix.h  Position.h  Position2D.h  PositionH.h  Rect.h  Spatial.h  Sphere.h  Vector.h  Vector2D.h  VectorBundle.h  VectorBundle2.h
Code/spat/support/: CMakeLists.txt  SpatSupportStream.h  SpatSupportXML.h
Code/spat/tests/: BoostTestSpatialHelpers.h  SpatTest.cpp  TestSpatial.cpp  TestStream.cpp
Code/trax/: Body.h  CMakeLists.txt  Configuration.h  Connector.h  ConnectorType.h  Curve.h  Curve_Imp.h  End.h  Event.h  Fixtures.h  GeomTrack.h  IDType.h  Identified.h  ImplementationHelper.h  Indicator.h  Interfaces.h  Jack.h  Location.h  LogicElements.h  Material.h  Numerics.h  ObjectID.h  Orientation.h  ParallelTrack.h  Parser.h  Plug.h  RoadwayTwist.h  Section.h  SectionTrack.h  Sensor.h  Sensor_Imp.h  Signal.h  Simulated.h  SocketRegistry.h  Switch.h  Timer.h  Track.h  TrackData.h  TrackJoint.h  TrackJointFeeder.h  (+9 more)
Code/trax/collections/: CMakeLists.txt  Collection.h  CollectionDecorator.h  Collections.h  ConnectorCollection.h  FixturesCollections.h  IndicatorCollection.h  Interfaces.h  MovableTrackAutoConnecting.h  ObjectIDDecorator.h  PulseCounterCollection.h  SignalCollection.h  TimerCollection.h  TrackCollection.h  TrackCollectionContainer.h  TrackSystem.h  TrackSystemParser.h
Code/trax/collections/source/: Collections_Imp.cpp  ConnectorCollection_Imp.cpp  ConnectorCollection_Imp.h  FixturesCollections.cpp  IndicatorCollection_Imp.cpp  IndicatorCollection_Imp.h  MovableTrackAutoConnecting_Imp.cpp  MovableTrackAutoConnecting_Imp.h  PulseCounterCollection_Imp.cpp  PulseCounterCollection_Imp.h  SignalCollection_Imp.cpp  SignalCollection_Imp.h  TimerCollection_Imp.cpp  TimerCollection_Imp.h  TrackCollectionContainer_Imp.cpp  TrackCollectionContainer_Imp.h  TrackCollection_Imp.cpp  TrackCollection_Imp.h  TrackSystemParser_Imp.cpp  TrackSystemParser_Imp.h  TrackSystem_Imp.cpp  TrackSystem_Imp.h
Code/trax/collections/support/: Anl3TrackSystemReader.h  Anl4TrackSystemReader.h  Anl4TrackSystemWriter.h  CMakeLists.txt  CollectionSupportWriteXML.h  CollectionSupportXML.h  FixturesCollections.h  TrackSystemReader.h
Code/trax/collections/tests/: Test.cpp  TestTrackSystem.cpp
Code/trax/engines/PhysX/: CMakeLists.txt  PhysX_Adapter.h  PhysX_Body_Imp.h  PhysX_Imp.h  PhysX_TrackJoint.h
Code/trax/rigid/: Body.h  CMakeLists.txt  CollidableTrack.h  Geom.h  GeomType.h  Gestalt.h  Joint.h  Material.h  MovableTrack.h  Scene.h  Shape.h  Simulated.h  Simulator.h  StaticTrack.h  TrackJoint.h  TrackJointFeeder.h  TrackJointLimits.h  TractionForceCharacteristic.h  Wheelset.h
Code/trax/rigid/collections/: CMakeLists.txt  MovableTrackAutoConnecting.h  SceneCollection.h
Code/trax/rigid/modules/: CMakeLists.txt  Camera.h  CameraType.h  Module.h  ModuleCollection.h  ModuleParser.h  ModuleSet.h
Code/trax/rigid/source/: Body_Imp.cpp  Body_Imp.h  CollidableTrack_Imp.cpp  CollidableTrack_Imp.h  FrameSync_Impl.h  Geom_Imp.cpp  Geom_Imp.h  Gestalt_Imp.cpp  Gestalt_Imp.h  Material_Imp.cpp  MovableSectionTrack_Imp.cpp  MovableSectionTrack_Imp.h  MovableTrack_Imp.cpp  MovableTrack_Imp.h  RigidDynamicTrack_Imp.cpp  RigidDynamicTrack_Imp.h  Scene_Imp.cpp  Scene_Imp.h  (+9 more)
Code/trax/source/: Body_Imp.cpp  Body_Imp.h  Configuration_Imp.cpp  Connector_Imp.cpp  Connector_Imp.h  CurveCreators_Imp.cpp  Curve_Imp.cpp  End_Imp.cpp  Event_Imp.cpp  Event_Imp.h  Fixtures.cpp  GeomTrack_Imp.cpp  GeomTrack_Imp.h  Indicator_Imp.cpp  Indicator_Imp.h  Jack_Imp.cpp  Jack_Imp.h  Location_Imp.cpp  LogicElements_Imp.cpp  LogicElements_Imp.h  Material_Imp.cpp  MovableTrack_Imp.cpp  MovableTrack_Imp.h  Orientation_Imp.cpp  ParallelTrack_Imp.cpp  ParallelTrack_Imp.h  Parser_Imp.cpp  Parser_Imp.h  Plug_Imp.cpp  Plug_Imp.h  RoadwayTwist_Imp.cpp  RoadwayTwist_Imp.h  SectionTrack_Imp.cpp  SectionTrack_Imp.h  Section_Imp.cpp  Section_Imp.h  Sensor_Imp.cpp  Sensor_Imp.h  SignalSemaphore_Imp.cpp  SignalSemaphore_Imp.h  (+20 more)
Code/trax/support/: CMakeLists.txt  Fixtures.h  TraxSupportStream.h  TraxSupportXML.h
Code/trax/tests/: Test.cpp  TestCurves.cpp  TestLocation.cpp  TestReservation.cpp  TestSensors.cpp  TestSpatialDimensionatedValues.cpp  TestTracks.cpp  TestTracksNormalize.cpp  TestTractionForceCharacteristic.cpp  TestVersion.cpp
Test/: CMakeLists.txt  Test.cpp
Test/appframe/: AppFrameTest.cpp  CMakeLists.txt  TestCommands.cpp
Test/common/: CMakeLists.txt  Test.cpp  TestHelpers.cpp  TestInterval.cpp  TestNarrowCast.cpp
Test/dim/: BoostTestDimensionedValuesHelpers.h  CMakeLists.txt  DimTest.cpp  TestDimDocu.cpp  TestDimensionatedValues.cpp
Test/spat/: BoostTestSpatialHelpers.h  CMakeLists.txt  SpatTest.cpp  TestSpatial.cpp  TestStream.cpp
Test/trax/: CMakeLists.txt  Test.cpp  TestCoreDocu.cpp  TestCurves.cpp  TestLocation.cpp  TestReservation.cpp  TestSensors.cpp  TestSignals.cpp  TestSpatialDimensionatedValues.cpp  TestTracks.cpp  TestTracksNormalize.cpp  TestTractionForceCharacteristic.cpp  TestVersion.cpp
Test/trax/collections/: CMakeLists.txt  TestTrackSystem.cpp
Test/trax/rigid/: CMakeLists.txt  Test.cpp  TestBody.cpp  TestDynamicTrack.cpp  TestStaticTrack.cpp  TestTractionForceCharacteristic.cpp
Test/trax/support/: TestSupportXML.cpp
(+285 files in other folders)
