add_library(spat 
    INTERFACE
        Box.h
        Frame.h
        Matrix.h
        Position.h
        Position2D.h
        PositionH.h
        Rect.h
        Spatial.h
        Sphere.h
        Vector.h
        Vector2D.h
        VectorBundle.h
        VectorBundle2.h
)

target_link_libraries(spat
    INTERFACE 
        common
)
